--- a/Pear/Controllers/New New Redesign/Onboarding/Onboarding Explaination Pages/OnboardingExplainationPage4ViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Onboarding Explaination Pages/OnboardingExplainationPage4ViewController.storyboard
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-meme-4" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
-                                <rect key="frame" x="20" y="283" width="335.00000000000023" height="335.00000000000023"/>
+                                <rect key="frame" x="20" y="283" width="335" height="335"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="L3Q-s1-RX1" secondAttribute="height" multiplier="1:1" id="hpY-Qg-Lqf"/>
                                 </constraints>
