--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserBasicInfoTableViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/UserBasicInfoTableViewController.storyboard
@@ -25,7 +25,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="i0p-9R-OCp">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="InfoItemTVC" rowHeight="60" id="i0p-9R-OCp" customClass="InfoItemTableViewCell" customModule="Pear" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="i0p-9R-OCp" id="2XP-YT-8mC">
@@ -33,19 +33,19 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uRm-cS-Ddf">
-                                            <rect key="frame" x="24" y="8" width="290" height="20"/>
+                                            <rect key="frame" x="24" y="8" width="293.5" height="16.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <color key="textColor" name="primaryTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ne-1y-09a">
-                                            <rect key="frame" x="24" y="31.5" width="290" height="20"/>
+                                            <rect key="frame" x="24" y="35" width="293.5" height="16.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Uf-Pg-bZl">
-                                            <rect key="frame" x="326" y="20" width="38" height="19.5"/>
+                                            <rect key="frame" x="329.5" y="21.5" width="34.5" height="16.5"/>
                                             <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                             <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -71,6 +71,12 @@
                                         <constraint firstAttribute="bottom" secondItem="5ne-1y-09a" secondAttribute="bottom" constant="8" id="xv7-yN-sv6"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="fieldNameLabel" destination="uRm-cS-Ddf" id="DfY-KL-nbD"/>
+                                    <outlet property="infoImageView" destination="3ge-NQ-MU7" id="yoW-Ft-Zjo"/>
+                                    <outlet property="subtitleLabel" destination="5ne-1y-09a" id="Ynz-yR-DtO"/>
+                                    <outlet property="visibilityLabel" destination="6Uf-Pg-bZl" id="5ci-t6-hcB"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                     </tableView>
